added second password

--- a/server/views/register.ejs
+++ b/server/views/register.ejs
@@ -20,6 +20,10 @@
 	<input type="password" name="password"/><br/>
 	</div>
 	<div>
+	<label>Re-type Password:</label>
+	<input type="password" name="secondPassword"/><br/>
+	</div>
+	<div>
 	<input type="checkbox" name="rememberme"/>Remember Me
 	</div>
 	<div>
