--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0043)http://getbootstrap.com/examples/jumbotron/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +6,7 @@
 <meta name="author" content="">
 <link rel="shortcut icon" href="http://getbootstrap.com/assets/ico/favicon.png">
 
-<title>Jumbotron Template for Bootstrap</title>
+<title>Learn With Me</title>
 <link rel="stylesheet" href="https://s-passets-ec.pinimg.com/webapp/style/app/desktop/bundle.10029be8.css">
 
 
@@ -15,7 +14,7 @@
 <link href="http://getbootstrap.com/dist/css/bootstrap.css" rel="stylesheet">
 
 <!-- Custom styles for this template -->
-<link href="http://getbootstrap.com/examples/jumbotron/jumbotron.css" rel="stylesheet">
+<!--<link href="http://getbootstrap.com/examples/jumbotron/jumbotron.css" rel="stylesheet">-->
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -23,84 +22,99 @@
       <script src="../../assets/js/respond.min.js"></script>
       <![endif]-->
       
-      <link href="css/screen-7e85af3f63.css" rel="stylesheet">
-
+      <style>
+      html {
+        background: url(img/bg.jpg) no-repeat
+        fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size:
+        cover; background-size: cover; }
+        .spielBox{
+          border-style:solid;
+          border-width:1px;
+          border-radius: 5px 10px 5px 10px;
+          background: rgba(0, 0, 0, 0.6); 
+        }
+        
+        </style>
+        
+      </head>
       
-  </head>
-  
-  <body>
-  	<div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
-  		<div class="container">
-  			<div class="navbar-header">
-  				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-  					<span class="icon-bar"></span>
-  					<span class="icon-bar"></span>
-  					<span class="icon-bar"></span>
-  				</button>
-  			</div>
-  			<div class="collapse navbar-collapse">
-  				<ul class="nav navbar-nav">
-  					<li class="active">
-  						<a href="/">Home</a>
-  					</li>
-  					<li>
-  						<a href="#about">About</a>
-  					</li>
-  					<% if (!user) { %>
-  				</ul>
-  				<form action="/login" method="post" class="navbar-form navbar-right">
+      <body style="background: rgba(0,0,0,0);">
+       
+        <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+            </div>
+            <div class="collapse navbar-collapse">
+              <ul class="nav navbar-nav">
+                <li class="active">
+                  <a href="/">Home</a>
+                </li>
+                <li>
+                  <a href="#about">About</a>
+                </li>
+                <% if (!user) { %>
+              </ul>
+              <form action="/login" method="post" class="navbar-form navbar-right">
 
-  					<div class="form-group">
-  						<input name="username" type="text" placeholder="Email" class="form-control">
-  					</div>
-  					<div class="form-group">
-  						<input name="password" type="password" placeholder="Password" class="form-control">
-  					</div>
-  					<button type="submit" class="btn btn-success">
-  						Sign in
-  					</button>
-  					<% } else { %>
-  					<li> 
-  						<a href="/dashboard">Dashboard</a>
-  					</li>
-  				</ul>		    
-  				<form action="/logout" method="get" class="navbar-form navbar-right">
+                <div class="form-group">
+                  <input name="username" type="text" placeholder="Email" class="form-control">
+                </div>
+                <div class="form-group">
+                  <input name="password" type="password" placeholder="Password" class="form-control">
+                </div>
+                <button type="submit" class="btn btn-success">
+                  Sign in
+                </button>
+                <% } else { %>
+                <li> 
+                  <a href="/dashboard">Dashboard</a>
+                </li>
+              </ul>       
+              <form action="/logout" method="get" class="navbar-form navbar-right">
 
-  					<button type="submit" class="btn btn-success">
-  						Sign Out
-  					</button>
-  					<% } %>
-  				</form>
-  			</div>
-  			<!--/.nav-collapse -->
-  		</div>
-  	</div>
-  	<!-- Header -->
-  	<div class="jumbotron">
-  		<div class="container">
-  			<h1>
-  				Welcome to Learn with me
-  			</h1>
-  			<p>
-  				<a class="rounded Button xlarge Module hasText unAuthFacebookConnect unAuth registerLoginButton btn"> <em></em>
-  					<span class="buttonText unAuthFacebookConnect">
-  						Sign up with Facebook
-  					</span>
-  				</a>
-  				
-  				<a href="/register" class="btn btn-success btn-lg"> Sign up with email</a>
-  				
-  			</p>
-  		</div>
-  	</div>
+                <button type="submit" class="btn btn-success">
+                  Sign Out
+                </button>
+                <% } %>
+              </form>
+            </div>
+            <!--/.nav-collapse -->
+          </div>
+        </div>
+        <!-- Header -->
+        <div class="jumbotron"  style="background: rgba(0,0,0,0.8);">
+          <div class="container"  style="background: rgba(0,0,0,0.0);">
+            <h1>
+              <font color="white">Welcome to Learn with me</fon>
+              </h1>
+              <% if (!user) { %>
 
-  	
-  	
+              <p>
+                <a class="rounded Button xlarge Module hasText unAuthFacebookConnect unAuth registerLoginButton btn"> <em></em>
+                  <span class="buttonText unAuthFacebookConnect">
+                    Sign up with Facebook
+                  </span>
+                </a>
+                
+                <a href="/register" class="btn Button xlarge"> Sign up with email</a>
+                <% } %>
+
+              </p>
+            </div>
+          </div>
+
+          
+          
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="../../assets/js/jquery.js"></script>
     <script src="../../dist/js/bootstrap.min.js"></script>
-</body>
+  </body>
 
-</html>
+  </html>
